# oclgrep

./: CMakeLists.txt  LICENSE  README.md  automaton.cl  collector.cl  test.txt  utf.txt
fuzz/: string_to_graph.cpp
fuzz-in/: class  multiplier  multiplier2  plus
include/: common.hpp  config.hpp  engine.hpp  regex_parser.hpp
res/: automaton.cl
src/: common.cpp  engine.cpp  main.cpp  regex_parser.cpp
